[gd_scene load_steps=4 format=3 uid="uid://cyj6tu264upor"]

[ext_resource type="Script" path="res://src/cell_button_2d.gd" id="1_iwntk"]
[ext_resource type="PackedScene" uid="uid://vp62gro2lhae" path="res://scenes/cell_button.tscn" id="1_x6uef"]
[ext_resource type="AudioStream" uid="uid://bcj3tjv4uk1ei" path="res://assets/sounds/sonar-ping-95840.mp3" id="3_wfhta"]

[node name="CellButton2D" type="Node2D"]
script = ExtResource("1_iwntk")

[node name="CellButton" parent="." instance=ExtResource("1_x6uef")]

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wfhta")
